📄Add list function

--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -26,6 +26,9 @@
 			  <a class="nav-link" href="{% url 'todo:users_detail' request.user.pk %}">{{ request.user.username }}</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" href="{% url 'todo:lists_list' %}">リスト一覧</a>
+			</li>
+			<li class="nav-item">
 			  <a class="nav-link" href="{% url 'logout' %}">ログアウト</a>
 			</li>
             {% else %}
