--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -61,6 +61,11 @@
     {% block content %}
     {% endblock %}
   </main>
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">© 2022 kentaro shimokawa</p>
+    </div>
+  </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
