--- a/todo/static/todo/custom.css
+++ b/todo/static/todo/custom.css
@@ -8,8 +8,7 @@ body {
 }
 
 img {
-	height: 400px;
-	width: 400px;
+	width: 60%;
 }
   
 .bg {
@@ -62,4 +61,17 @@ img {
 	width: 240px;
 	height: 100%;
 	margin-top: 50px;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	background-color: #f5f5f5;
+}
+	
+.container .text-muted {
+	text-align: center;
+	padding-top: 15px;
 }
