--- a/todo/static/todo/custom.css
+++ b/todo/static/todo/custom.css
@@ -67,8 +67,8 @@ img {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 60px;
-	background-color: #f5f5f5;
+	height: 40px;
+	margin-bottom: 10px;
 }
 	
 .container .text-muted {
