--- a/todo/templates/todo/cards/detail.html
+++ b/todo/templates/todo/cards/detail.html
@@ -10,6 +10,8 @@
 		<dd class="col-sm-9">{{ card.description }}</dd>
 		<dt class="col-sm-3">リスト名</dt>
 		<dd class="col-sm-9">{{ card.list.title }}</dd>
+		<dt class="col-sm-3">優先順位</dt>
+		<dd class="col-sm-9">{{ card.order }}</dd>
 		<dt class="col-sm-3">ユーザー名</dt>
 		<dd class="col-sm-9">{{ card.user.username }}</dd>
 	</dl>
